--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         minZoom: 0,
         maxZoom: 15,
         zoom: 2
-    }).setView([-36.49, -72.12]);
+    }).setView([-36.49, -72.12],2);
 
     var streets = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '© <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
