--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         attribution: '© <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-    var al_to_geotiff_file = "bio1.tif";
+    var al_to_geotiff_file = "https://djwillichile.github.io/prueba-Leaflet/bio1.tif";
     fetch(al_to_geotiff_file)
       .then(response => response.arrayBuffer())
       .then(arrayBuffer => {
