--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
   <h1 class="title mapTitle">ScalarField / Interpolation</h1>
   <div id="map"></div>
 
-    <!-- CDN references -->
-    <script src="//npmcdn.com/leaflet@1.2.0/dist/leaflet.js"></script>
-    
-    <script src="//d3js.org/d3.v4.min.js"></script>
-    <script src="//npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script> <!-- optional -->
+  <!-- CDN -->
+  <script src="//npmcdn.com/leaflet@1.2.0/dist/leaflet.js"></script>
 
-    <!-- Plugin -->
-    <script src="https://ihcantabria.github.io/Leaflet.CanvasLayer.Field/dist/leaflet.canvaslayer.field.js"></script>
+  <script src="//d3js.org/d3.v4.min.js"></script>
+  <script src="//npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script>
+  
+  <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
 
+  <!-- Plugin -->
+  <script src="https://ihcantabria.github.io/Leaflet.CanvasLayer.Field/dist/leaflet.canvaslayer.field.js"></script>
 
   <script>
     let map = L.map('map');
