--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <script src="//d3js.org/d3.v4.min.js"></script>
   <script src="//npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script>
-  
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
 
   <!-- Plugin -->
@@ -36,7 +36,7 @@
     }).addTo(map);
 
     /* An ASCIIGrid Raster with Surface current velocity */
-    d3.text('data/Bay_Speed.asc', function (asc) {
+    d3.text('data/bio1.asc', function (asc) {
       let s = L.ScalarField.fromASCIIGrid(asc);
 
       let identify = function (e) {
