--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       let identify = function (e) {
         if (e.value !== null) {
           let v = e.value.toFixed(3);
-          let html = `<span class="popupText">Surface currents velocity ${v} m/s</span>`;
+          let html = `<span class="popupText">bioclimatic ${v} m/s</span>`;
           let popup = L.popup().setLatLng(e.latlng).setContent(html).openOn(map);
         }
       };
