--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     }).addTo(map);
 
     /* An ASCIIGrid Raster with Surface current velocity */
-    d3.text('data/bio1.asc', function (asc) {
-      let s = L.ScalarField.fromASCIIGrid(asc);
+    d3.text('data/bio1.tif', function (tif) {
+      let s = L.ScalarField.fromASCIIGrid(tif);
 
       let identify = function (e) {
         if (e.value !== null) {
@@ -53,20 +53,6 @@
       });
       interpolated.on('click', identify);
       interpolated.addTo(map);
-
-      // vs original
-      let original = L.canvasLayer.scalarField(s);
-      original.on('click', identify);
-      map.fitBounds(interpolated.getBounds());
-
-
-      L.control.layers({
-        "Interpolated": interpolated,
-        "Original": original
-      }, {}, {
-          position: 'bottomleft',
-          collapsed: false
-        }).addTo(map);
 
 
     });
