--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     }).addTo(map);
 
     /* An ASCIIGrid Raster with Surface current velocity */
-    d3.text('data/bio1.tif', function (tif) {
-      let s = L.ScalarField.fromGeoTIFF(tif);
+    d3.text('data/bio1.asc', function (asc) {
+      let s = L.ScalarField.fromASCIIGrid(asc);
 
       let identify = function (e) {
         if (e.value !== null) {
@@ -64,7 +64,7 @@
         "Interpolated": interpolated,
         "Original": original
       }, {}, {
-          position: 'topright',
+          position: 'topleft',
           collapsed: false
         }).addTo(map);
 
