--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         "Interpolated": interpolated,
         "Original": original
       }, {}, {
-          position: 'topleft',
+          position: 'topright',
           collapsed: false
         }).addTo(map);
 
