--- a/index.html
+++ b/index.html
@@ -1,76 +1,81 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <title>ScalarField / Interpolation</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" href="//unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
-  <link rel="stylesheet" href="examples.css" />
+  <head>
+    <title>ScalarField / Interpolation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="//unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
+    <link rel="stylesheet" href="examples.css" />
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
+  </head>
 
-<body>
-  <h1 class="title mapTitle">ScalarField / Interpolation</h1>
-  <div id="map"></div>
+  <body>
+    <h1 class="title mapTitle">ScalarField / Interpolation</h1>
+    <div id="map"></div>
 
-  <!-- CDN -->
-  <script src="//npmcdn.com/leaflet@1.2.0/dist/leaflet.js"></script>
+    <!-- CDN -->
+    <script src="//npmcdn.com/leaflet@1.2.0/dist/leaflet.js"></script>
 
-  <script src="//d3js.org/d3.v4.min.js"></script>
-  <script src="//npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script>
+    <script src="//d3js.org/d3.v4.min.js"></script>
+    <script src="//npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script>
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
 
-  <!-- Plugin -->
-  <script src="https://ihcantabria.github.io/Leaflet.CanvasLayer.Field/dist/leaflet.canvaslayer.field.js"></script>
+    <!-- Plugin -->
+    <script src="https://ihcantabria.github.io/Leaflet.CanvasLayer.Field/dist/leaflet.canvaslayer.field.js"></script>
 
-  <script>
-    let map = L.map('map');
+    <script>
+      let map = L.map('map');
 
-    /* Basemap */
-    var url = 'https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png';
-    L.tileLayer(url, {
-      attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, &copy; <a href="https://carto.com/attributions">CARTO</a>',
-      subdomains: 'abcd'
-    }).addTo(map);
-
-    /* An ASCIIGrid Raster with Surface current velocity */
-    d3.text('data/bio1.asc', function (asc) {
-      let s = L.ScalarField.fromASCIIGrid(asc);
-
-      let identify = function (e) {
-        if (e.value !== null) {
-          let v = e.value.toFixed(3);
-          let html = `<span class="popupText">bioclimatic ${v} m/s</span>`;
-          let popup = L.popup().setLatLng(e.latlng).setContent(html).openOn(map);
-        }
-      };
-
-      // Bilinear interpolation
-      let interpolated = L.canvasLayer.scalarField(s, {
-        interpolate: true,
-      });
-      interpolated.on('click', identify);
-      interpolated.addTo(map);
-
-      // vs original
-      let original = L.canvasLayer.scalarField(s);
-      original.on('click', identify);
-      map.fitBounds(interpolated.getBounds());
-
-
-      L.control.layers({
-        "Interpolated": interpolated,
-        "Original": original
-      }, {}, {
-          position: 'topright',
-          collapsed: false
+        /* Dark basemap */
+        let url = 'https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_nolabels/{z}/{x}/{y}.png';
+        L.tileLayer(url, {
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, &copy; <a href="https://carto.com/attributions">CARTO</a>',
+            subdomains: 'abcd'
         }).addTo(map);
 
+        /* Temperature and Geopotencial Height in GeoTIFF with 2 bands */
+        d3.request("data/bio1.tif").responseType('arraybuffer').get(
+            function (error, tiffData) {
+                // Geopotential height (BAND 0)
+                let bio = L.ScalarField.fromGeoTIFF(tiffData.response, bandIndex = 0);
 
-    });
-  </script>
-</body>
+                let layerbio = L.canvasLayer.scalarField(geo, {
+                    color: chroma.scale('RdPu').domain(geo.range),
+                    opacity: 0.65
+                }).addTo(map);
+                
+                let interpolated = L.canvasLayer.scalarField(layerbio, {
+                  interpolate: true,
+                });
+
+                layerbio.on('click', function (e) {
+                    if (e.value !== null) {
+                        let v = e.value.toFixed(0);
+                        let html = (`<span class="popupText">bioclim ${v} m</span>`);
+                        let popup = L.popup()
+                            .setLatLng(e.latlng)
+                            .setContent(html)
+                            .openOn(map);
+                    }
+                });
+
+                interpolated.addTo(map);
+
+
+                L.control.layers({
+                    "Geopotential Height": interpolated
+                }, {}, {
+                        position: 'topright',
+                        collapsed: false
+                    }).addTo(map);
+
+                map.fitBounds(layerGeo.getBounds());
+
+            });
+
+    </script>
+  </body>
 
 </html>
