--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
     <script>
       let map = L.map('map');
 
-        /* Dark basemap */
-        let url = 'https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_nolabels/{z}/{x}/{y}.png';
-        L.tileLayer(url, {
-            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, &copy; <a href="https://carto.com/attributions">CARTO</a>',
-            subdomains: 'abcd'
+        map.createPane('pane_GoogleTerrain_0');
+        map.getPane('pane_GoogleTerrain_0').style.zIndex = 400;
+        let url = 'https://mt1.google.com/vt/lyrs=p&x={x}&y={y}&z={z}';
+        var layer_GoogleTerrain_0 = L.tileLayer(url, {
+            pane: 'pane_GoogleTerrain_0',
+            opacity: 1.0,
+            minZoom: 1,
+            maxZoom: 28,
+            minNativeZoom: 0,
+            maxNativeZoom: 20
         }).addTo(map);
+        layer_GoogleTerrain_0;
 
     </script>
   </body>
