--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://ihcantabria.github.io/Leaflet.CanvasLayer.Field/dist/leaflet.canvaslayer.field.js"></script>
 
     <script>
-      let map = L.map('map');
+      let map = L.map('map').setView([51.505, -0.09], 13);
 
         map.createPane('pane_GoogleTerrain_0');
         map.getPane('pane_GoogleTerrain_0').style.zIndex = 400;
