--- a/index.html
+++ b/index.html
@@ -25,21 +25,7 @@
     <!-- Plugin -->
     <script src="https://ihcantabria.github.io/Leaflet.CanvasLayer.Field/dist/leaflet.canvaslayer.field.js"></script>
 
-    <script>
-      let map = L.map('map').setView([51.505, -0.09], 13);
-
-        map.createPane('pane_GoogleTerrain_0');
-        map.getPane('pane_GoogleTerrain_0').style.zIndex = 400;
-        let url = 'https://mt1.google.com/vt/lyrs=p&x={x}&y={y}&z={z}';
-        var layer_GoogleTerrain_0 = L.tileLayer(url, {
-            pane: 'pane_GoogleTerrain_0',
-            opacity: 1.0,
-            minZoom: 1,
-            maxZoom: 28,
-            minNativeZoom: 0,
-            maxNativeZoom: 20
-        }).addTo(map);
-        layer_GoogleTerrain_0;
+    <script src="JS/SCRIPT.js">
 
     </script>
   </body>
