--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
 
     <!-- Plugin -->
-    <script src="https://ihcantabria.github.io/Leaflet.CanvasLayer.Field/dist/leaflet.canvaslayer.field.js"></script>
+    <script src="dist/leaflet.canvaslayer.field.js"></script>
 
-    <script src="JS/SCRIPT.js">
-
-    </script>
+    <script src="JS/SCRIPT.js"></script>
   </body>
 
 </html>
