--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Plugin -->
     <script src="dist/leaflet.canvaslayer.field.js"></script>
 
-    <script src="JS/SCRIPT.js"></script>
+    <script src="JS/SCRIPT2.js"></script>
   </body>
 
 </html>
