--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- Plugin -->
     <script src="dist/leaflet.canvaslayer.field.js"></script>
 
+    <!-- Data -->
+    <script src="data/Regin_6.js"></script>
+
     <script src="JS/SCRIPT2.js"></script>
   </body>
 
