--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="//unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
     <link rel="stylesheet" href="examples.css" />
+    <link rel="stylesheet" href="load_styles.css">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
   </head>
 
   <body>
+    <div ID="load_container">
+        <div ID="load"></div>
+    </div>
+
+    <script type="text/javascript">
+        window.onload = function(){
+            var contenedor = document.getElementById('load_container');
+            contenedor.style.visibility = 'hidden';
+            contenedor.style.opacity = '0';
+        }
+    </script>
+
+
     <h1 class="title mapTitle">ScalarField / Interpolation</h1>
     <div id="map"></div>
 
