--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
 
     <script type="text/javascript">
         window.onload = function(){
-            var contenedor = document.getElementById('load_container');
-            contenedor.style.visibility = 'hidden';
-            contenedor.style.opacity = '0';
+            setTimeout(function(){
+                var contenedor = document.getElementById('load_container');
+                contenedor.style.visibility = 'hidden';
+                contenedor.style.opacity = '0';
+            }, 500);
         }
     </script>
-    
+
   </body>
 
 </html>
