--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 
     <script src="JS/SCRIPT3.js"></script>
 
+    <script type="text/javascript">
+        window.onload = function(){
+            setTimeout(function(){
+                var contenedor = document.getElementById('load_container');
+                contenedor.style.visibility = 'hidden';
+                contenedor.style.opacity = '0';
+            }, 1100);
+        }
+    </script>
+
   </body>
 
 </html>
