--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <h1 class="title mapTitle">ScalarField / Interpolation</h1>
     <div id="map"></div>
 
+    <script src="data/SHP/REGIONES_2020.js"></script>
+
     <!-- CDN -->
     <script src="//npmcdn.com/leaflet@1.2.0/dist/leaflet.js"></script>
 
