--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="map"></div>
 
     <script src="data/SHP/REGIONES_2020.js"></script>
+    <script src="data/SHP/COMUNAS_2020.js"></script>
 
     <!-- CDN -->
     <script src="//npmcdn.com/leaflet@1.2.0/dist/leaflet.js"></script>
