--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <script src="data/SHP/REGIONES_2020.js"></script>
     <script src="data/SHP/COMUNAS_2020.js"></script>
+    <script src="data/SHP/PROVINCIAS_2020.js"></script>
 
     <!-- CDN -->
     <script src="//npmcdn.com/leaflet@1.2.0/dist/leaflet.js"></script>
