--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
   <head>
     <title>ScalarField / Interpolation</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="//unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <link rel="stylesheet" href="examples.css" />
     <link rel="stylesheet" href="load_styles.css">
+
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
   </head>
@@ -26,6 +29,7 @@
 
     <!-- CDN -->
     <script src="//npmcdn.com/leaflet@1.2.0/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
     <script src="//d3js.org/d3.v4.min.js"></script>
     <script src="//npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script>
